--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Lesson 12/Homework/data/
 Lesson 12/Homework/data_cifar10/
 Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 12/Homework/mnist_checkpoint.pth
+Lesson 13/Homework/DataForModel/
