--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Lesson 12/Homework/data_cifar10/
 Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 13/Homework/DataForModel/
+Lesson 13/Homework/imagenette_fc.pth
