--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 13/Homework/DataForModel/
 Lesson 13/Homework/imagenette_fc.pth
+Lesson 17/Homework/Data/otus_basketball_dataset/
