--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 12/Homework/mnist_checkpoint.pth
 Lesson 13/Homework/DataForModel/
 Lesson 13/Homework/imagenette_fc.pth
-Lesson 17/Homework/Data/otus_basketball_dataset/
+Lesson 17/Homework/Data/
+Lesson 17/Homework/detectron2/
