--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Lesson 13/Homework/DataForModel/
 Lesson 13/Homework/imagenette_fc.pth
 Lesson 17/Homework/Data/
 Lesson 17/Homework/detectron2/
+.vscode/
+Lesson 17/Homework/otus_basketball_dataset/
+Lesson 17/Homework/otus_basketball_dataset copy/
+Lesson 17/Homework/run/
