--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ Lesson 17/Homework/detectron2/
 .vscode/
 Lesson 17/Homework/otus_basketball_dataset/
 Lesson 17/Homework/otus_basketball_dataset copy/
-Lesson 17/Homework/run/
+Lesson 17/Homework/runs/
