--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Lesson 17/Homework/otus_basketball_dataset/
 Lesson 17/Homework/otus_basketball_dataset copy/
 Lesson 17/Homework/runs/
 Lesson 17/Homework/yolo11m.pt
+Lesson 24/Homework/data
